<resources>
    <string name="app_name">Insight</string>
    <string name="updating_data">updating data...</string>
    <string name="last_updated">last updated:</string>
    <string name="showing_results_for">Showing results for:</string>
    <string name="positive_cases_per_province">Positive cases per province</string>
    <string name="tests">Tests</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="positive_cases">Positive Cases</string>
    <string name="zero">0</string>
    <string name="positive_cases_provincial_breakdown">Positive cases provincial breakdown</string>
    <string name="news">News</string>
    <string name="preferences">Preferences</string>
    <string name="all_time">All Time</string>
    <string name="single_day">Single Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insight_bulletin">Insight Bulletin</string>
    <string name="search">Search</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="other_news">Other News</string>
    <string name="article_description">Article Descrition</string>
    <string name="source">Source</string>
    <string name="date_published">Date </string>
    <string name="website_url">website url</string>
    <string name="API_KEY">c0a96c06a6cc4e56a2d6bb33fd91975b</string>
    <string name="who_url">https://www.who.int/health-topics/coronavirus</string>
    <string name="sa_covid_url">https://sacoronavirus.co.za/</string>
    <string name="sa_covid_chat_url">https://api.whatsapp.com/send?phone=27600123456</string>
    <string name="privacy_policy_url">https://stevenmokoena.co.za/insight/privacy-policy.html</string>
</resources>
