<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_headlines_card"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="20dp"
    android:clickable="true"
    android:focusable="true"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/article_image"
            android:layout_width="400dp"
            android:layout_height="259dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="0dp"
            android:src="@drawable/placeholder_img"

            app:riv_corner_radius="10dp"
            app:riv_mutate_background="true"

            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/news_card"
            android:layout_width="400dp"
            android:layout_height="330dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            android:backgroundTint="#000"
            android:clickable="true"
            android:focusable="true"


            >

            <TextView
                android:id="@+id/tv_top_headlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppinsbold"

                android:padding="10dp"

                android:text="@string/top_headlines"
                android:textColor="#fff"
                android:textSize="18sp"

                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_description"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/poppins"

                android:padding="10dp"
                android:text="@string/article_description"
                android:textColor="#fff"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="190dp"
                android:fontFamily="@font/poppins"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/source"
                android:textColor="#fff" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/poppins"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/date_published"
                android:textColor="#fff" />


        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>