<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="#000">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="26sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.mancj.materialsearchbar.MaterialSearchBar
            android:id="@+id/searchBar"
            style="@style/MaterialSearchBarDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:mt_hint="@string/search"
            app:mt_maxSuggestionsCount="10"
            app:mt_roundedSearchBarEnabled="true"
            app:mt_speechMode="false" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_headlines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:fontFamily="@font/poppinsblack"
            android:layout_alignParentLeft="true"
            android:includeFontPadding="false"
            android:layout_margin="10dp"
            android:text="@string/top_headlines"
            android:textColor="#000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_results_for"
            android:layout_alignTop="@id/text_view_headlines"
            android:layout_toRightOf="@id/text_view_headlines"
            android:visibility="gone"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Showing results for: lorem text"
                android:id="@+id/text_view_results_for"
                android:layout_weight=".9"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:src="@drawable/ic_baseline_close_24"/>

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_marginTop="5dp"
            android:layout_below="@id/text_view_headlines"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/top_headlines_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginTop="45dp"
                android:padding="10dp" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </RelativeLayout>

</LinearLayout>