<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:nestedScrollingEnabled="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="0dp"
        android:background="#000">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:fontFamily="@font/poppinsbold"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_centerInParent="true"
            android:gravity="center"
            />



    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="25dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/showing_results_for"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusable="false"
                android:inputType="date"
                android:fontFamily="@font/poppinsbold"
                android:textSize="15sp"
                android:textColor="#FF0869"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:drawableTint="#FF0869"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="90dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                app:cardElevation="4dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/backPositives">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="-10dp"
                        android:layout_marginStart="42dp"
                        android:src="@drawable/positive"
                        android:padding="10dp"

                         />

                    <TextView
                        android:id="@+id/textViewPositiveCasesNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"

                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/zero"

                        android:textSize="42sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/positive_cases"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"
                       android:layout_marginBottom="10dp"
                        android:layout_marginStart="20dp"

                       />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                app:cardElevation="4dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/backRecovered">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="-10dp"
                        android:layout_marginStart="42dp"
                        android:src="@drawable/recovery"
                        android:padding="10dp"

                        />

                    <TextView
                        android:id="@+id/textViewRecoveredNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="42sp"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"

                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"
                       android:layout_marginBottom="10dp"
                        android:layout_marginStart="35dp"

                         />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                app:cardElevation="4dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/backDied">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="-10dp"
                        android:layout_marginStart="42dp"
                        android:src="@drawable/death"
                        android:padding="10dp"

                        />

                    <TextView
                        android:id="@+id/textViewDeathsNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="42sp"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"

                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="48dp"
                        />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                android:layout_weight=".5"
                app:cardElevation="4dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/backTests">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="-10dp"
                        android:layout_marginStart="42dp"
                        android:src="@drawable/test"
                        android:padding="10dp"

                        />

                    <TextView
                        android:id="@+id/textViewTestsNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="42sp"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"

                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tests"
                        android:textSize="18sp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="50dp"
                       />
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/positive_cases_per_province"
            android:textSize="24sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="#000"
            />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.CardView"
            app:cardCornerRadius="20dp"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardElevation="10dp"
            >
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:padding="15dp"
                android:scrollbarStyle="outsideOverlay">

                <view
                    android:id="@+id/barViewOneDayProvince"
                    class="im.dacer.androidcharts.BarView"
                    android:layout_width="wrap_content"
                    android:layout_height="400dp" />

            </HorizontalScrollView>

        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_updated"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:fontFamily="@font/poppins"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewPieProvincesUpdateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:fontFamily="@font/poppins"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

</LinearLayout>